force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <description>The Session custom object tracks specific sessions of activities offered by the resort, detailing timing, location, and capacity, to manage bookings and optimize guest participation efficiently.</description>
    <label>Experience Session</label>
    <nameField>
        <displayFormat>ES-{00000000}</displayFormat>
        <label>Session Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>