force-app/main/default/objects/Session__c/fields/Is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Is_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The experience has been canceled.</description>
    <label>Is Canceled</label>
    <type>Checkbox</type>
</CustomField>