force-app/main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available_Slots__c</columns>
    <columns>Booked_Slots__c</columns>
    <columns>Capacity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Duration_Hours__c</columns>
    <columns>End_Time__c</columns>
    <columns>Experience_Name__c</columns>
    <columns>Is_Canceled__c</columns>
    <columns>Location__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>